force-app/main/default/objects/Account/fields/Account_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Detail__c</fullName>
    <description>Detail for the Account Source</description>
    <inlineHelpText>Detail for the Account Source</inlineHelpText>
    <label>Account Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>E&amp;V Ambassadors</fullName>
            </value>
            <value>
                <fullName>E&amp;V Friends</fullName>
            </value>
            <value>
                <fullName>E&amp;V SM Employees</fullName>
            </value>
            <value>
                <fullName>E&amp;V SM Investor</fullName>
            </value>
            <value>
                <fullName>Finleap</fullName>
            </value>
            <value>
                <fullName>Finleap Connect</fullName>
            </value>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
            <value>
                <fullName>Solarisbank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>