force-app/main/default/objects/Account/fields/Account_Source_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Group_ID__c</fullName>
    <description>Account Source Group ID to segregate customers</description>
    <formula>IF(AND(ISPICKVAL(AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account_Source_Detail__c, &quot;E&amp;V Friends&quot;)), &quot;CnsR7kA&quot;,
  IF(AND(ISPICKVAL(AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account_Source_Detail__c, &quot;Finleap&quot;)), &quot;n7zUWWA&quot;,
    IF(AND(ISPICKVAL(AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account_Source_Detail__c, &quot;Finleap Connect&quot;)), &quot;4LTqdxA&quot;,
      IF(AND(ISPICKVAL(AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account_Source_Detail__c, &quot;Friends &amp; Family&quot;)), &quot;aZK74kA&quot;,
        IF(AND(ISPICKVAL(AccountSource, &quot;Website&quot;)), &quot;VpUr7XA&quot;,
            &quot;ExpK8UA&quot;)))))</formula>
    <inlineHelpText>Account Source Group ID to segregate customers</inlineHelpText>
    <label>Account Source Group ID</label>
    <type>Text</type>
</CustomField>