force-app/main/default/objects/Account/fields/Auth0_ID__c.field-meta.xml
<CustomField>
    <fullName>Auth0_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Auth0 Identification</description>
    <externalId>true</externalId>
    <inlineHelpText>Auth0 Identification</inlineHelpText>
    <label>Auth0 ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>