force-app/main/default/objects/Account/fields/Auth0_Tenet__c.field-meta.xml
<CustomField>
    <fullName>Auth0_Tenet__c</fullName>
    <label>Auth0 Tenet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EV Smartmoney</fullName>
            </value>
            <value>
                <fullName>Digibank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>