force-app/main/default/objects/Account/fields/Birth_City__c.field-meta.xml
<CustomField>
    <fullName>Birth_City__c</fullName>
    <label>Birth City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Berlin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>