force-app/main/default/objects/Account/fields/Birth_Name__c.field-meta.xml
<CustomField>
    <fullName>Birth_Name__c</fullName>
    <label>Birth Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>