force-app/main/default/objects/Account/fields/Business_Bank__c.field-meta.xml
<CustomField>
    <fullName>Business_Bank__c</fullName>
    <label>Business Bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>