force-app/main/default/objects/Account/fields/Business_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Business_IBAN__c</fullName>
    <label>Business IBAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>