force-app/main/default/objects/Account/fields/Classification_Count__c.field-meta.xml
<CustomField>
    <fullName>Classification_Count__c</fullName>
    <label>Classification Count</label>
    <summaryForeignKey>Customer_Classification__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>