force-app/main/default/objects/Account/fields/Completed_Name__c.field-meta.xml
<CustomField>
    <fullName>Completed_Name__c</fullName>
    <label>Completed Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>