force-app/main/default/objects/Account/fields/Deletion_Request__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As per rules defined by Article 4(1) GDPR. Customer requested for deletion of PII data</inlineHelpText>
    <label>Deletion Request</label>
    <type>Checkbox</type>
</CustomField>