force-app/main/default/objects/Account/fields/Deletion_Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Request_Source__c</fullName>
    <label>Deletion Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Backend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>