force-app/main/default/objects/Account/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPLOYED</fullName>
                <label>Employed</label>
            </value>
            <value>
                <fullName>UNEMPLOYED</fullName>
                <label>Unemployed</label>
            </value>
            <value>
                <fullName>PUBLIC_SECTOR_EMPLOYEE</fullName>
                <label>Public Sector Employee</label>
            </value>
            <value>
                <fullName>PROFESSIONAL_SOLDIER</fullName>
                <label>Professional Soldier</label>
            </value>
            <value>
                <fullName>FREELANCER</fullName>
                <label>Freelancer</label>
            </value>
            <value>
                <fullName>HOUSEWORK</fullName>
                <label>Housework</label>
            </value>
            <value>
                <fullName>APPRENTICE</fullName>
                <label>Apprentice</label>
            </value>
            <value>
                <fullName>MANAGEMENT</fullName>
                <label>Management</label>
            </value>
            <value>
                <fullName>RETIRED</fullName>
                <label>Retired</label>
            </value>
            <value>
                <fullName>STUDENT</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>SELF_EMPLOYED</fullName>
                <label>Self Employed</label>
            </value>
            <value>
                <fullName>MILITARY_OR_COMMUNITY_SERVICE</fullName>
                <label>Military Or Community Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>