force-app/main/default/objects/Account/fields/EVSM_Auth0_ID__c.field-meta.xml
<CustomField>
    <fullName>EVSM_Auth0_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>EVSM Auth0 ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>