force-app/main/default/objects/Account/fields/Fatca_Crs_Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Fatca_Crs_Confirmed_At__c</fullName>
    <label>Fatca Crs Confirmed At</label>
    <type>DateTime</type>
</CustomField>