force-app/main/default/objects/Account/fields/Fatca_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Fatca_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatca Relevant</label>
    <type>Checkbox</type>
</CustomField>