force-app/main/default/objects/Account/fields/Industry_Key__c.field-meta.xml
<CustomField>
    <fullName>Industry_Key__c</fullName>
    <label>Industry Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUILDING_INDUSTRY</fullName>
                <label>Building Industry</label>
            </value>
            <value>
                <fullName>TRADE_MAINTENANCE_AND_REPAIR_OF_VEHICLES</fullName>
                <label>Trade Maintenance And Repair Of Vehicles</label>
            </value>
            <value>
                <fullName>OTHER_SERVICES</fullName>
                <label>Other Services</label>
            </value>
            <value>
                <fullName>GASTRONOMY</fullName>
                <label>Gastronomy</label>
            </value>
            <value>
                <fullName>SCIENTIFIC_TECHNICAL_CONSULTING_SERVICES</fullName>
                <label>Scientific Technical Consulting Services</label>
            </value>
            <value>
                <fullName>INFORMATION_AND_COMMUNICATION</fullName>
                <label>Information And Communication</label>
            </value>
            <value>
                <fullName>OTHER_ECONOMIC_SERVICES</fullName>
                <label>Other Economic Services</label>
            </value>
            <value>
                <fullName>FARMER_FORESTRY_FISHING_AND_AQUACULTURE</fullName>
                <label>Farmer Forestry Fishing And Aquaculture</label>
            </value>
            <value>
                <fullName>POWER_WATER_SUPPLY_DISPOSAL_MINING</fullName>
                <label>Power Water Supply Disposal Mining</label>
            </value>
            <value>
                <fullName>CHEMICAL_INDUSTRY_COKE_OVEN_MINERAL_OIL</fullName>
                <label>Chemical Industry Coke Oven Mineral Oil</label>
            </value>
            <value>
                <fullName>MANUFACTURE_PLASTICS_RUBBER_GOODS</fullName>
                <label>Manufacture Plastics Rubber Goods</label>
            </value>
            <value>
                <fullName>STONE_SOIL_CERAMICS_GLASS</fullName>
                <label>Stone Soil Ceramics Glass</label>
            </value>
            <value>
                <fullName>METAL_PRODUCTION_PROCESSING</fullName>
                <label>Metal Production Processing</label>
            </value>
            <value>
                <fullName>MECHANICAL_ENGINEERING_VEHICLE_MANUFACTURING</fullName>
                <label>Mechanical Engineering Vehicle Manufacturing</label>
            </value>
            <value>
                <fullName>MANUFACTURE_DATA_PROC_EQUIPMENT_ELECTRIC_OPTICS</fullName>
                <label>Manufacture Data Proc Equipment Electric Optics</label>
            </value>
            <value>
                <fullName>WOOD_PAPER_PRINT_INDUSTRY_FURNITURE_ETC</fullName>
                <label>Wood Paper Print Industry Furniture Etc</label>
            </value>
            <value>
                <fullName>LEATHER_TEXTILE_CLOTHES_INDUSTRY</fullName>
                <label>Leather Textile Clothes Industry</label>
            </value>
            <value>
                <fullName>FOOD_INDUSTRY_TOBACCO_PRODUCTS</fullName>
                <label>Food Industry Tobacco Products</label>
            </value>
            <value>
                <fullName>TRANSPORT_AND_STORAGE_AND_NEWS_TRANSMISSION</fullName>
                <label>Transport And Storage And News Transmission</label>
            </value>
            <value>
                <fullName>FINANCIAL_LEASING_COMPANIES</fullName>
                <label>Financial Leasing Companies</label>
            </value>
            <value>
                <fullName>FINANCIAL_INSTITUTIONS_INSURANCE</fullName>
                <label>Financial Institutions Insurance</label>
            </value>
            <value>
                <fullName>HOLDING_COMPANIES</fullName>
                <label>Holding Companies</label>
            </value>
            <value>
                <fullName>HOUSING_COMPANIES</fullName>
                <label>Housing Companies</label>
            </value>
            <value>
                <fullName>OTHER_PROPERTY_MANAGEMENT</fullName>
                <label>Other Property Management</label>
            </value>
            <value>
                <fullName>HEALTH_CARE_VETERIN_A_WELFARE_FIRM_FREELANCE</fullName>
                <label>Health Care Veterin A Welfare Firm Freelance</label>
            </value>
            <value>
                <fullName>LEASING_OF_MOVABLE_OBJECTS</fullName>
                <label>Leasing Of Movable Objects</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>ECONOMICALLY_DEPENDENT_INDIVIDUALS</fullName>
                <label>Economically Dependent Individuals</label>
            </value>
            <value>
                <fullName>OTHER_PERSONAL_SERVICE_ACTIVITIES</fullName>
                <label>Other Personal Service Activities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>