force-app/main/default/objects/Account/fields/Investment_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Investment_Funnel_Stage__c</fullName>
    <formula>IF(Investment_Opportunity_Count__c&gt;0,&apos;Investment Request&apos;, 

 IF(Classification_Count__c&gt;0, &apos;Classification Request&apos;, 

 IF(KYC_Count__c&gt;0, &apos;KYC&apos;, 

 IF( LastName = &apos;[Not Provided]&apos; ,&apos;Newsletter Subscription&apos;, &apos;Registration&apos;)

 ) ) )</formula>
    <label>Investment Funnel Stage</label>
    <type>Text</type>
</CustomField>