force-app/main/default/objects/Account/fields/Investment_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Investment_Opportunity_Count__c</fullName>
    <label>Investment Opportunity Count</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Investment (SMI)</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>