force-app/main/default/objects/Account/fields/Invitation_Code__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Code__c</fullName>
    <formula>Invitation_Code__pc</formula>
    <label>Invitation Code</label>
    <type>Text</type>
</CustomField>