force-app/main/default/objects/Account/fields/Inviter_Code__c.field-meta.xml
<CustomField>
    <fullName>Inviter_Code__c</fullName>
    <label>Inviter Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>