force-app/main/default/objects/Account/fields/Is_First_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Login_Date__c</fullName>
    <inlineHelpText>Indicates if user has logged in to system at least once</inlineHelpText>
    <label>Is First Login Date</label>
    <type>DateTime</type>
</CustomField>