force-app/main/default/objects/Account/fields/KYC_Count__c.field-meta.xml
<CustomField>
    <fullName>KYC_Count__c</fullName>
    <label>KYC Count</label>
    <summaryFilterItems>
        <field>KYC_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Successful, Successful, Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>KYC_Detail__c.Method__c</field>
        <operation>equals</operation>
        <value>POSTIDENT</value>
    </summaryFilterItems>
    <summaryForeignKey>KYC_Detail__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>