force-app/main/default/objects/Account/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SINGLE</fullName>
                <label>Single</label>
            </value>
            <value>
                <fullName>MARRIED</fullName>
                <label>Married</label>
            </value>
            <value>
                <fullName>DIVORCED</fullName>
                <label>Divorced</label>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>