force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>New Partner</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>