force-app/main/default/objects/Account/fields/Own_Economic_Interest_Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Own_Economic_Interest_Signed_At__c</fullName>
    <label>Own Economic Interest Signed At</label>
    <type>DateTime</type>
</CustomField>