force-app/main/default/objects/Account/fields/Solarisbank_Tenent__c.field-meta.xml
<CustomField>
    <fullName>Solarisbank_Tenent__c</fullName>
    <label>Solarisbank Tenent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>