force-app/main/default/objects/Account/fields/Solarisbank_Web_UI__c.field-meta.xml
<CustomField>
    <fullName>Solarisbank_Web_UI__c</fullName>
    <formula>IF( !ISBLANK(Solarisbank_Id__c ) , HYPERLINK(&apos;https://webui-ng.solarisbank.de/#/persons/&apos;+Solarisbank_Id__c , &apos;Open Solarisbank Web UI&apos;), &apos;&apos;)</formula>
    <label>Solarisbank Web UI</label>
    <type>Text</type>
</CustomField>