force-app/main/default/objects/Account/fields/T_C_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>T_C_Accepted_Date__c</fullName>
    <label>T&amp;C Accepted Date</label>
    <type>DateTime</type>
</CustomField>