force-app/main/default/objects/Account/fields/Tax_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Assessment__c</fullName>
    <label>Tax Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEPARATE</fullName>
                <label>Separate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>