force-app/main/default/objects/Account/fields/Terms_Conditions_Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions_Signed_At__c</fullName>
    <label>Bank Terms Conditions Signed At</label>
    <type>DateTime</type>
</CustomField>