force-app/main/default/objects/Account/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>UTM Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>