force-app/main/default/objects/Account/recordTypes/Campaign_User.recordType-meta.xml
<RecordType>
    <fullName>Campaign_User</fullName>
    <active>true</active>
    <label>Campaign User</label>
</RecordType>