force-app/main/default/objects/Account/recordTypes/Web_Channel.recordType-meta.xml
<RecordType>
    <fullName>Web_Channel</fullName>
    <active>true</active>
    <label>Web Channel</label>

</RecordType>