force-app/main/default/objects/Account/recordTypes/WebLeads.recordType-meta.xml
<RecordType>
    <fullName>WebLeads</fullName>
    <active>true</active>
    <label>WebLeads</label>
</RecordType>