force-app/main/default/objects/Account/listViews/Business_Accounts.listView-meta.xml
<ListView>
    <fullName>Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <label>Business Accounts</label>
    <language>en_US</language>
</ListView>