force-app/main/default/objects/Account/listViews/E_V_Konto_Customers.listView-meta.xml
<ListView>
    <fullName>E_V_Konto_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Legal_Name__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Solarisbank_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>E&amp;V Konto Customers</label>
</ListView>