force-app/main/default/objects/Account/listViews/E_V_Konto_Partner_Customers.listView-meta.xml
<ListView>
    <fullName>E_V_Konto_Partner_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Legal_Name__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Solarisbank_Id__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Person_Partner_Account</value>
    </filters>
    <filters>
        <field>Is_Test__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>EV Konto Partner Customers</label>
</ListView>