force-app/main/default/objects/Account/listViews/SMI_Customers.listView-meta.xml
<ListView>
    <fullName>SMI_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>EVSM_Auth0_ID__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Person_Investment_Customer</value>
    </filters>
    <label>SMI Customers</label>
</ListView>